crates/cribo/tests/snapshots/execution_results@stdlib_module_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "All modules used successfully",
    stderr: "",
}
