crates/cribo/tests/snapshots/execution_results@stdlib_module_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_name_collision/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Result: Success with ['test'] and TestEnum.A\nObject type: TestObject\nTest completed successfully",
    stderr: "",
}
