crates/cribo/tests/snapshots/execution_results@stdlib_module_name_conflict.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_name_conflict/main.py
---
ExecutionResults {
    status: Success,
    stdout: "MyClass instance\nIs MyClass a subclass of ABC? True",
    stderr: "",
}
