crates/cribo/tests/snapshots/execution_results@stdlib_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_name_collision/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Result: Formatted: MyClass(local_abc_class)",
    stderr: "",
}
