crates/cribo/tests/snapshots/execution_results@stickytape_circular_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_circular_reference/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
