crates/cribo/tests/snapshots/execution_results@stickytape_explicit_relative_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
