crates/cribo/tests/snapshots/execution_results@stickytape_explicit_relative_import_single_dot.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import_single_dot/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
